# Near-Swift

./: .gitignore  App.swift  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  PROJECT.md  Package.resolved  Package.swift  README.md  build-dmg-new.sh  build-dmg.sh  package-lock.json  package.json
Models/: AIModels.swift  CountdownEvent.swift  IconType.swift  PetModel.swift  WeatherModel.swift
NearCountdown/: Package.swift  README.md  build-dmg.sh
NearCountdown/NearCountdown/: App.swift  Info.plist
Resources/: AppIcon.icns
Resources/doc/: “NearCountdown”的取样.txt  双窗口优化方案.md  取样分析.md  和风天气API.md  天气API对接开发文档.md  桌面宠物功能开发文档.md
Resources/lottie/: guaishou.json
Services/: AIService.swift  CountdownManager.swift  HealthManager.swift  LogAnalysisManager.swift  LogManager.swift  NotificationManager.swift  PetManager.swift  PowerStateManager.swift  StatusBarManager.swift  StorageManager.swift  SystemMonitor.swift  UserIntentMonitor.swift  WeatherService.swift
Utils/: DragDropDelegate.swift  Logger.swift  LunarCalendar.swift  ResourceBundle.swift  SharedUtils.swift  VisualEffectView.swift
Views/: AddCountdownView.swift  BubbleContentView.swift  BubbleWindow.swift  CalendarView.swift  ContentView.swift  CountdownCardView.swift  LottieView.swift  PetContentView.swift  PetView.swift  PetWindow.swift  SettingsView.swift  SystemView.swift
Views/Components/: BottomTabBar.swift  FabButton.swift  HeaderView.swift  NearConfirmDialog.swift  (+5 more)
src/: App.vue  App.vue.backup  ai-service.js  main.cjs  preload.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: Near.icns
src-tauri/src/: main.rs
(+21 files in other folders)
