[package]
name = "near"
version = "1.0.0"
description = "越近越重要，越近越靠前"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
image = "0.25"
sysinfo = "0.30"  # 系统信息监控
tokio = { version = "1.0", features = ["full"] }  # 异步运行时

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
